# ESC204

./: LICENSE  README.md
actor_network/: ANTgrapher.py  actors.csv
lab 3/: .gitignore  lab 3.ino
lab 3/server/: .gitignore  StaticFiles.h  server.ino
lab 3/website/: package-lock.json
lab 3/website/src/: App.css  App.test.tsx  App.tsx  Buttons.css  Buttons.tsx  Sensors.tsx  Slider.css  Slider.tsx
project/server/: StaticFiles.h  server.ino
project/website/: package.json
project/website/src/: App.test.tsx  App.tsx
prototype/: env.py  network.py  neural_network.py
widget lab 2/assignment/: CMakeLists.txt  assignment.cpp
widget lab 2/assignment/lib/: dht.cpp  dht.hpp  pwm.cpp  pwm.hpp  thread.cpp  thread.hpp
widget lab 2/assignment/py/: code.py
widget lab 2/calibrate_ultrasonic/: CMakeLists.txt  calibrate_ultrasonic.cpp
widget lab 2/dht/: CMakeLists.txt  dht.cpp
widget lab 2/photoresistor/: CMakeLists.txt  photoresistor.cpp
widget lab 2/pir/: CMakeLists.txt  pir.cpp
widget lab 2/pwm_buzzer/: .gitignore  CMakeLists.txt  pwm_buzzer.cpp
widget lab 2/pwm_led/: CMakeLists.txt  pwm_led.cpp
widget lab 2/pwm_motor/: CMakeLists.txt  pwm_motor.cpp
widget lab 2/thermoresistor/: CMakeLists.txt  thermoresistor.cpp
widget lab 2/ultrasonic/: CMakeLists.txt  ultrasonic.cpp
